# torch-scan

./: .buildinfo  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  changelog.html  genindex.html  index.html  installing.html  modules.html  mypy.ini  objects.inv  process.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  torchscan.html  utils.html
.circleci/: config.yml
.conda/: meta.yaml
.doctrees/: changelog.doctree  environment.pickle  index.doctree  modules.doctree  process.doctree  torchscan.doctree  utils.doctree
.github/: PULL_REQUEST_TEMPLATE.md  collect_env.py  dependabot.yml  labeler.yml  validate_deps.py  validate_headers.py  verify_labels.py
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: builds.yml  doc-deploy.yaml  docs.yml  documentation.yaml  main.yml  pkg-publish.yaml  pr-labels.yml  publish.yml  pypi-publish.yaml  release.yaml  release.yml  style.yml  tests.yml
_modules/: index.html
_modules/torchscan/: crawler.html  utils.html
_modules/torchscan/modules/: flops.html  macs.html  memory.html  receptive.html
_modules/torchscan/process/: memory.html
_sources/: index.rst.txt  modules.rst.txt
_static/: documentation_options.js
_static/js/: custom.js
conda/: meta.yaml
docs/: build.sh  requirements.txt
docs/source/: changelog.rst  conf.py  index.rst  modules.rst  process.rst
docs/source/_static/js/: custom.js
latest/: changelog.html  genindex.html  index.html  installing.html  modules.html  objects.inv  process.html  py-modindex.html  search.html  searchindex.js  torchscan.html  utils.html
latest/.doctrees/: changelog.doctree  environment.pickle  index.doctree  installing.doctree  modules.doctree  process.doctree  torchscan.doctree  utils.doctree
latest/_modules/: index.html
latest/_modules/torchscan/: crawler.html  utils.html
latest/_modules/torchscan/modules/: flops.html  macs.html  memory.html  receptive.html
latest/_modules/torchscan/process/: memory.html
latest/_sources/: index.rst.txt  utils.rst.txt
latest/_static/: documentation_options.js
scripts/: benchmark.py  collect_env.py  requirements.txt
test/: test_crawler.py  test_modules.py  test_process.py  test_utils.py
tests/: requirements.txt  test_crawler.py  test_modules.py  test_process.py  test_utils.py
torchscan/: __init__.py  crawler.py  utils.py
torchscan/modules/: __init__.py  flops.py  macs.py  memory.py  receptive.py
torchscan/process/: __init__.py  memory.py
v0.1.0/: changelog.html  genindex.html  index.html  installing.html  modules.html  objects.inv  process.html  py-modindex.html  search.html  searchindex.js  torchscan.html  utils.html
v0.1.0/.doctrees/: environment.pickle  modules.doctree  process.doctree  torchscan.doctree  utils.doctree
v0.1.0/_modules/: index.html
v0.1.0/_modules/torchscan/: crawler.html  utils.html
v0.1.0/_modules/torchscan/modules/: flops.html  macs.html  memory.html  receptive.html
v0.1.0/_modules/torchscan/process/: memory.html
v0.1.0/_sources/: index.rst.txt  installing.rst.txt
v0.1.0/_static/: documentation_options.js
v0.1.1/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  process.html  py-modindex.html  search.html  searchindex.js  torchscan.html  utils.html
v0.1.1/.doctrees/: environment.pickle  index.doctree  modules.doctree  process.doctree  torchscan.doctree  utils.doctree
v0.1.1/_modules/: index.html
v0.1.1/_modules/torchscan/: crawler.html  utils.html
v0.1.1/_modules/torchscan/modules/: flops.html  macs.html  memory.html  receptive.html
v0.1.1/_modules/torchscan/process/: memory.html
v0.1.1/_sources/: torchscan.rst.txt  utils.rst.txt
v0.1.1/_static/: documentation_options.js
