[metadata]
author = François-Guillaume Fernandez
author_email = fg-feedback@protonmail.com
description = Useful information about your Pytorch module
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/frgfm/torch-scan
download_url = https://github.com/frgfm/torch-scan/tags
project_urls = 
    Documentation = https://frgfm.github.io/torch-scan
    Source = https://github.com/frgfm/torch-scan
    Tracker = https://github.com/frgfm/torch-scan/issues
license = Apache
license_file = LICENSE
keywords = pytorch, deep learning, summary, memory, ram
classifiers = 
	Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
zip_safe = True
packages = find:
include_package_data = True
python_requires = >=3.6.0,<4
install_requires =
	torch>=1.5.0

[options.package_data]
* = LICENSE

[options.packages.find]
exclude =
    tests*

[options.extras_require]
test =
    pytest>=5.3.2
    coverage>=4.5.4
quality =
	flake8>=3.9.0
    isort>=5.7.0
    mypy>=0.812
    pydocstyle>=6.0.0
docs =
	sphinx<=3.4.3
    sphinx-rtd-theme==0.4.3
    sphinxemoji>=0.1.8
    sphinx-copybutton>=0.3.1
    docutils<0.18
    # cf. https://github.com/readthedocs/readthedocs.org/issues/9038
    Jinja2<3.1
dev =
    %(test)s
    %(quality)s
    %(docs)s

[flake8]
max-line-length = 120
ignore = E402, E265, F403, W503, W504, E731
exclude = .github, .git, venv*, docs, build
per-file-ignores = **/__init__.py:F401

[mypy]
files = torchscan/*.py
show_error_codes = True
pretty = True

[isort]
line_length = 120
src_paths = torchscan, tests
skip_glob = **/__init__.py
known_third_party = torch, torchvision

[pydocstyle]
select = D300,D301,D417
match = .*\.py

[coverage:run]
source = torchscan
